
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct snd_soc_pcm_runtime {TYPE_1__* dai; } ;
struct snd_soc_dai {int dummy; } ;
struct snd_pcm_substream {struct snd_soc_pcm_runtime* private_data; } ;
struct snd_pcm_hw_params {int dummy; } ;
struct TYPE_2__ {struct snd_soc_dai* cpu_dai; struct snd_soc_dai* codec_dai; } ;


 int SND_SOC_DAIFMT_CBS_CFS ;
 int SND_SOC_DAIFMT_I2S ;
 int SND_SOC_DAIFMT_NB_NF ;
 int omap3pandora_cmn_hw_params (struct snd_soc_dai*,struct snd_soc_dai*,int) ;

__attribute__((used)) static int omap3pandora_in_hw_params(struct snd_pcm_substream *substream,
 struct snd_pcm_hw_params *params)
{
 struct snd_soc_pcm_runtime *rtd = substream->private_data;
 struct snd_soc_dai *codec_dai = rtd->dai->codec_dai;
 struct snd_soc_dai *cpu_dai = rtd->dai->cpu_dai;

 return omap3pandora_cmn_hw_params(codec_dai, cpu_dai,
       SND_SOC_DAIFMT_I2S |
       SND_SOC_DAIFMT_NB_NF |
       SND_SOC_DAIFMT_CBS_CFS);
}
